<resources>
    <string name="app_name">Spo2 Watcher</string>
    <string name="action_settings">Settings</string>
    <string name="finger_instructions">- Lightly place your index finger on the rear camera.\n- Make sure the camera is fully covered.\n- Measure in a shaded environment.\n- Don\'t move your finger until the measurement is complete.\n- Finally place your finger then press start.</string>
    <string name="bp">Blood pressure (BP) is the pressure of circulating blood on the walls of blood vessels.
        \nBlood pressure is usually expressed in terms of the systolic pressure (maximum during one heartbeat) over diastolic pressure (minimum in between two heartbeats)
        and is measured in millimeters of mercury (mmHg), above the surrounding atmospheric pressure.
    </string>

    <string name="hr">Heart rate is the speed of the heartbeat measured by the number of contractions (beats) of the heart per minute (bpm).
        \n\nThe American Heart Association states the normal resting adult human heart rate is 60–100 bpm.
        \nTachycardia is a fast heart rate, defined as above 100 bpm at rest.
        \nBradycardia is a slow heart rate, defined as below 60 bpm at rest.
    </string>

    <string name="oxy">Oxygen saturation is the fraction of [oxygen]-saturated hemoglobin relative to total hemoglobin (unsaturated + saturated) in the blood. The human body requires and regulates a very precise and specific balance of oxygen in the blood. </string>

    <string name="resp">The respiratory rate is the rate at which breathing occurs. This is usually measured in breaths per minute and is set, and controlled by the respiratory centre.</string>
    <string name="title_activity_doctor">Spo2 Watcher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="helpline">+91-11-23978046</string>
    <string name="helpline2">1075</string>
    <string name="website">https://www.mohfw.gov.in</string>
    <string name="nearest_response_centers">Region-wise Helpline Numbers</string>
    <string name="Failed">Measurement Failed. Please don\'t remove your finger before 30 seconds or measure in a darker environment.</string>
    <string name="Wizard">Measuring your vitals, please don\'t remove your finger from the camera.The process can take upto 30 seconds</string>
    <string name="measuring">Recording and Measuring</string>
    <string name="analysing">Analysing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning">Symptom Alert</string>
    <string name="warning_body1">Your Blood Oxygen Levels have been found to be abnormally low quite a few times that may indicate presence of an infection. If you are experiencing any other symptom like Fever, Headache, Dry Cough or Difficulty breathing, contact your nearest Covid-19 Health facility immediately by clicking the seek help button. </string>
    <string name="warning_body2">However, if you are not experiencing any other symptoms, it is Highly Recommended that you test your vitals again (with the second more accurate Arduino method if possible) and if the reading persists, contact your nearest Covid-19 Response centre immediately for a complete test to rule out any possibility of an assymptomatic infection or a reinfection if you are an existing patient.</string>
    <string name="code_source">the application code source and arduino program are both available in my  github repository with a brief explanation about the communication between the two endpoint</string>

    <string name="my_repo"><a href="https://github.com/ayoubElhoucine/Connect-Android-to-Arduino-via-Wifi">Navigate into the code source repository</a></string>
    <string name="measure_using_smartphone_camera_ppg">Measure using Smartphone Camera (PPG)</string>
    <string name="measure_using_external_sensor_and_arduino_wifi_connection_is_required">Measure using External Sensor and Arduino (Wifi Connection is Required)</string>
    <string name="connect_arduino_to_wifi">Connect Arduino To Wifi</string>
    <string name="enter_wifi_ssid">Enter Wifi SSID</string>
    <string name="enter_wifi_password">Enter Wifi Password</string>
    <string name="waiting">Waiting .....</string>
    <string name="waiting_dialog">Waiting for Arduino to acknowlege...</string>
    <string name="please_provide_the_following_details_to_continue">Please provide the following details to continue:</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_info">Please provide your mobile number where you will receive an SMS of the readings if you are only using the sensor without using the app.</string>
    <string name="enter_your_mobile">Enter your mobile number</string>
    <string name="emergency_details">Emergency Details: These numbers would receive an SOS SMS in case your vitals are found to be abnormal more than once. Feel free to skip adding theses numbers and you can add them later as well</string>
    <string name="node_mcu_id">Please enter the NodeMCU id:</string>
    <string name="mcu_id">NodeMCU id</string>
    <string name="edit_details">Edit User Details used by NodeMCU</string>
    <string name="emergency_contact_1">Emergency Contact 1</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>

</resources>
